docs: rewrite README for web app; document application-local.yml pattern
- Replace CLI command reference with build/run instructions for Spring Boot
- Document all app.* configuration keys
- Explain application-local.yml (gitignored) for local AWS secrets
- Document ua-classifier.rules customisation
- Update schema to match current columns

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>